[package]
name = "dx-dnd-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }
dioxus-web = { version = "0.7.9", features = ["hydrate"], optional = true }
dx-dnd = { path = "../../crates/dx-dnd", default-features = false }
web-sys = { version = "0.3", features = ["console"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "dep:dioxus-web", "dep:web-sys", "dx-dnd/web"]
server = ["dioxus/server"]
